--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCH-nHN7w5zeHRSlPzCRN8MYuL6XfaJlkY&libraries=places"></script>
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="/main.css">
+		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+ 		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+ 		<script type="text/javascript" src="/script.js"></script>
 		<title>Dog MeetUp</title>
 	</head>
 	<body>
 
 		<%- body %>
 
-
-
-		
- 		
-
-         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
- 		<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 	</body>
 </html>
