Taking out library

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,12 @@
 
 <div id="map"></div>
 
-$(document).ready(function() {
-	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
-}
+<div class="description">
+	<h2 class="parkName"></h2>
+	<h3 class="parkLocation"></h3>
+	<h3 class="parkRating"></h3>
+</div>
+
+<script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+         async defer>	
+</script>
