--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCH-nHN7w5zeHRSlPzCRN8MYuL6XfaJlkY&libraries=places"></script>
+		<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCH-nHN7w5zeHRSlPzCRN8MYuL6XfaJlkY&libraries=places">
+		</script>-->
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="/main.css">
 		<script src="//code.jquery.com/jquery-1.10.2.js"></script>
