Places library working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
 	<h3 class="parkLocation"></h3>
 	<h3 class="parkRating"></h3>
 </div>
-
-<script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
-         async defer>	
+<script type="text/javascript">
+    $(document).ready(function() {
+		initMap();
+	});	
 </script>
