Displaying park info when marker clicked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,11 @@
 
 <div class="description">
 	<h2 class="parkName"></h2>
-	<h3 class="parkLocation"></h3>
-	<h3 class="parkRating"></h3>
+	<p class="parkRating"></p>
+	<p class="parkPhone"></p>
+	<p class="parkLocation"></p>
+	<p class="parkHours"></p>
+	<p class="parkWebsite"></p>
 </div>
 <script type="text/javascript">
     $(document).ready(function() {
