park name populating in hidden input field

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 
 <form method="POST" action="/schedule">
 	<p><label>Time: <input name="time" type="time" id="time"></label></p>
+	<input type="hidden" name="parkName" id="park-name">
 	<input type="submit" value="Submit">
 </form>
 
