Login/logout/register functions and pages set up, nav bar added, settings page beginning to be set up

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- bootstrap -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<script src="//code.jquery.com/jquery.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		<!-- All other scripts/links -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCH-nHN7w5zeHRSlPzCRN8MYuL6XfaJlkY&libraries=places">
 		</script>
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
@@ -12,8 +17,46 @@
 		<title>Dog MeetUp</title>
 	</head>
 	<body>
+	<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="/">Dog MeetUp</a>
+			</div>
+	
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="/auth/login">Login</a></li>
+					<li><a href="/auth/register">Register</a></li>
+					<li><a href="/auth/logout">Logout</a></li>
+					<li><a href="/schedule">Schedule</a></li>
+					<li><a href="/settings">Settings</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div>
+	</nav>
 
+	<div>
+		<div>
+			Current user: <%= currentUser.username %>
+		</div>
+		<% if (typeof alerts !== 'undefined') { %>
+		  <% for (key in alerts) { %>
+		    <% alerts[key].forEach(function(thisMsg) { %>
+		      <div class="alert alert-<%= key %>"><%= thisMsg %></div>
+		    <% }); %>
+		  <% } %>
+		<% } %>
+		
 		<%- body %>
+	</div>
 
 	</body>
 </html>
