--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <form method="POST" action="/schedule">
 	<p><label>Time: <input name="time" type="time" id="time"></label></p>
 	<input type="hidden" name="parkName" id="park-name">
+	<input type="hidden" name="parkId" id="park-id">
 	<input type="submit" value="Submit">
 </form>
 
