Dog count added to User table!

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,61 +1,47 @@
 <h1>Settings</h1>
 
-<span>
-	<div class="btn-group">
-	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    Small Dogs <span class="caret"></span>
-	  </button>
-	  <ul class="dropdown-menu" id="smallDogs">
-	    <li><a href="#">0</a></li>
-	    <li><a href="#">1</a></li>
-	    <li><a href="#">2</a></li>
-	    <li><a href="#">3</a></li>
-	    <li><a href="#">4</a></li>
-	    <li><a href="#">5</a></li>
-	    <li><a href="#">6</a></li>
-	    <li><a href="#">7</a></li>
-	    <li><a href="#">8</a></li>
-	    <li><a href="#">9</a></li>
-	  </ul>
-	</div>
-</span>
+<form id="numDogs" method="POST">
+	<p>Small Dogs</p>
+	<select id="smallDogs" name="smallDogs">
+		<option>0</option>
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+		<option>6</option>
+		<option>7</option>
+		<option>8</option>
+		<option>9</option>
+	</select>
 
-<span>
-	<div class="btn-group">
-	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    Medium Dogs <span class="caret"></span>
-	  </button>
-	  <ul class="dropdown-menu" id="mediumDogs">
-	    <li><a href="#">0</a></li>
-	    <li><a href="#">1</a></li>
-	    <li><a href="#">2</a></li>
-	    <li><a href="#">3</a></li>
-	    <li><a href="#">4</a></li>
-	    <li><a href="#">5</a></li>
-	    <li><a href="#">6</a></li>
-	    <li><a href="#">7</a></li>
-	    <li><a href="#">8</a></li>
-	    <li><a href="#">9</a></li>
-	  </ul>
-	</div>
-</span>
+	<p>Medium Dogs</p>
+	<select id="mediumDogs" name="mediumDogs">
+		<option>0</option>
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+		<option>6</option>
+		<option>7</option>
+		<option>8</option>
+		<option>9</option>
+	</select>
 
-<span>
-	<div class="btn-group">
-	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    Large Dogs <span class="caret"></span>
-	  </button>
-	  <ul class="dropdown-menu" id="largeDogs">
-	    <li><a href="#">0</a></li>
-	    <li><a href="#">1</a></li>
-	    <li><a href="#">2</a></li>
-	    <li><a href="#">3</a></li>
-	    <li><a href="#">4</a></li>
-	    <li><a href="#">5</a></li>
-	    <li><a href="#">6</a></li>
-	    <li><a href="#">7</a></li>
-	    <li><a href="#">8</a></li>
-	    <li><a href="#">9</a></li>
-	  </ul>
-	</div>
-</span>
+	<p>Large Dogs</p>
+	<select id="largeDogs" name="largeDogs">
+		<option>0</option>
+		<option>1</option>
+		<option>2</option>
+		<option>3</option>
+		<option>4</option>
+		<option>5</option>
+		<option>6</option>
+		<option>7</option>
+		<option>8</option>
+		<option>9</option>
+	</select>
+
+	<input type="submit" value="Submit">
+</form>
