--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,47 +1,76 @@
 <h1>Settings</h1>
 
-<form id="numDogs" method="POST">
-	<p>Small Dogs</p>
-	<select id="smallDogs" name="smallDogs">
-		<option>0</option>
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-		<option>6</option>
-		<option>7</option>
-		<option>8</option>
-		<option>9</option>
-	</select>
+<form method="POST">
+			<p>Small Dogs</p>
+			<select id="smallDogs" name="smallDogs">
+				<option>0</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+				<option>7</option>
+				<option>8</option>
+				<option>9</option>
+			</select>
 
-	<p>Medium Dogs</p>
-	<select id="mediumDogs" name="mediumDogs">
-		<option>0</option>
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-		<option>6</option>
-		<option>7</option>
-		<option>8</option>
-		<option>9</option>
-	</select>
+			<p>Medium Dogs</p>
+			<select id="mediumDogs" name="mediumDogs">
+				<option>0</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+				<option>7</option>
+				<option>8</option>
+				<option>9</option>
+			</select>
 
-	<p>Large Dogs</p>
-	<select id="largeDogs" name="largeDogs">
-		<option>0</option>
-		<option>1</option>
-		<option>2</option>
-		<option>3</option>
-		<option>4</option>
-		<option>5</option>
-		<option>6</option>
-		<option>7</option>
-		<option>8</option>
-		<option>9</option>
-	</select>
-
-	<input type="submit" value="Submit">
+			<p>Large Dogs</p>
+			<select id="largeDogs" name="largeDogs">
+				<option>0</option>
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+				<option>5</option>
+				<option>6</option>
+				<option>7</option>
+				<option>8</option>
+				<option>9</option>
+			</select>
+			<input type="submit" value="Submit">
 </form>
+
+
+
+<!-- 
+
+Form for changing User Password
+Completeing later when I have more time
+
+<form method="POST">
+	<div class="panel panel-default">
+	  <div class="panel-heading">
+	    <h3 class="panel-title">Change Password</h3>
+	  </div>
+	  <div class="panel-body">
+	    <h4>Current Password</h4>
+	    <input type="password" id="currentPassword" name="currentPassword">
+	    <br>
+	    <h4>New Password</h4>
+	    <input type="password" id="newPassword" name="password">
+	    <br>
+	    <h4>Confirm Password</h4>
+	    <input type="password" id="confirmPassword" name="password2">
+	  </div>
+	<input type="submit" value="Submit">
+	</div>
+</form>
+ -->
+
+
+
