--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,6 +1,7 @@
-<h1><%= schedules[0].location %></h1>
+<h1><%= data.name %></h1>
 
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myChart" height="400" width="400"></canvas>
+
 <div id="legend"></div>
 
 <div class="description container">
