Added selectable stars for ratings

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -23,7 +23,13 @@
 		</div>
 		<div>
 			<label name="rating">Rating</label>
-			<input type="number" name="rating" id="rating">
+			<div class="acidjs-rating-stars" style="display: -webkit-inline-box">
+		        <input type="radio" name="rating" id="group-1-0" value="5" /><label for="group-1-0"></label>
+		        <input type="radio" name="rating" id="group-1-1" value="4" /><label for="group-1-1"></label>
+		        <input type="radio" name="rating" id="group-1-2" value="3" /><label for="group-1-2"></label>
+		        <input type="radio" name="rating" id="group-1-3" value="2" /><label for="group-1-3"></label>
+		        <input type="radio" name="rating" id="group-1-4"  value="1" /><label for="group-1-4"></label>
+			</div>
 		</div>
 		<div>
 			<label name="review">Review</label>
