Added delete button to reviews pertaining to user

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -55,6 +55,9 @@
 	        </form>
 		</div>
 		<p>Review: <%= review.reviews %></p>
+		<% if(currentUser.id == review.userId) { %>
+			<a href="/schedule/review/<%= review.id %>" class="delete-link">Delete</a>
+		<% } %>
 		___________________________________________________________________
 	</div>
 	<% }) %>
