--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,23 +1,27 @@
-<h1>Register</h1>
-<p>to gain access to scheduling and reviews!</p>
+<div id="registerPage">
+	<h1 id="registerHeader">Register</h1>
+	<h4 id="registerText">to gain access to scheduling and reviews!</h4>
 
-<form method="POST">
-	<div>
-		<label for="username">Username</label>
-		<input type="text" id="username" name="username">
+	<div id="registerContainer">
+		<form method="POST">
+			<div id="registerUsername">
+				<label for="username" id="usernameLabel">Username</label>
+				<input type="text" id="username" name="username">
+			</div>
+			<div id="registerEmail">
+				<label for="email" id="emailLabel">Email</label>
+				<input type="email" id="email" name="email">
+			</div>
+			<div id="registerPassword">
+				<label for="password" id="passwordLabel">Password</label>
+				<input type="password" id="password" name="password">
+			</div>
+			<div id="registerPassword2">
+				<label for="password2" id="password2Label">Confirm Password</label>
+				<input type="password" id="password2" name="password2">
+			</div>
+			<br>
+			<input type="submit" id="registerSubmit" value="Submit">
+		</form>
 	</div>
-	<div>
-		<label for="email">Email</label>
-		<input type="email" id="email" name="email">
-	</div>
-	<div>
-		<label for="password">Password</label>
-		<input type="password" id="password" name="password">
-	</div>
-	<div>
-		<label for="password2">Confirm Password</label>
-		<input type="password" id="password2" name="password2">
-	</div>
-
-	<input type="submit" value="Submit">
-</form>
+</div>
