--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -4,20 +4,20 @@
 
 	<div id="registerContainer">
 		<form method="POST">
-			<div id="registerUsername">
-				<label for="username" id="usernameLabel">Username</label>
+			<div>
+				<label for="username" id="usernameLabel" class="inputLabel">Username</label>
 				<input type="text" id="username" name="username">
 			</div>
-			<div id="registerEmail">
-				<label for="email" id="emailLabel">Email</label>
+			<div>
+				<label for="email" id="emailLabel" class="inputLabel">Email</label>
 				<input type="email" id="email" name="email">
 			</div>
-			<div id="registerPassword">
-				<label for="password" id="passwordLabel">Password</label>
+			<div>
+				<label for="password" id="passwordLabel" class="inputLabel">Password</label>
 				<input type="password" id="password" name="password">
 			</div>
-			<div id="registerPassword2">
-				<label for="password2" id="password2Label">Confirm Password</label>
+			<div>
+				<label for="password2" id="password2Label" class="inputLabel">Confirm Password</label>
 				<input type="password" id="password2" name="password2">
 			</div>
 			<br>
