--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
   <div class="col-xs-12 col-md-6">
   <div class="center-block">
 		<form method="POST" action="/schedule" id="submitTimeLocation" class="center-block">
-			<p><label>Time: <input name="time" type="time" id="time"></label></p>
+			<p><label id="timeLabel">Time: <input name="time" type="time" id="time"></label></p>
 			<input type="hidden" name="parkName" id="park-name">
 			<input type="hidden" name="parkId" id="park-id">
 			<input type="submit" id="timeLocSubBtn" value="Submit">
