--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,13 +1,17 @@
-<h1>Login</h1>
+<div id="loginpage">
+	<h1 id="loginHeader">Login</h1>
 
-<form method="POST">
-	<div>
-		<label for="email">Email</label>
-		<input type="email" name="email" id="email">
+	<div id="loginContainer">
+		<form method="POST">
+			<div>
+				<label for="email" id="loginEmailLabel" class="inputLabel">Email</label>
+				<input type="email" name="email" id="email">
+			</div>
+			<div>
+				<label for="password" class="inputLabel">Password</label>
+				<input type="password" name="password" id="password" class="loginPassword">
+			</div>
+			<input type="submit" id="loginSubmit" value="Submit">
+		</form>
 	</div>
-	<div>
-		<label for="password">Password</label>
-		<input type="password" name="password" id="password">
-	</div>
-	<input type="submit" value="Submit">
-</form>
+</div>
